unpackaged/main/default/objects/OrderApi__Access_Permission__c/OrderApi__Access_Permission__c.object-meta.xml
<CustomObject>
    <description>Access Permissions control the accessibility of content accessed via the API.</description>
    <label>Access Permission</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Access Permission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>