unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/Directories__c.field-meta.xml
<CustomField>
    <fullName>Directories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Directories</description>
    <inlineHelpText>Directories</inlineHelpText>
    <label>Directories</label>
    <referenceTo>DRCTS__Directories__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>