unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/DirectoryApi__Directory__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Directory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Directory related to the configured Access Permission.</description>
    <inlineHelpText>Link to the Directory related to the configured Access Permission.</inlineHelpText>
    <label>Directory</label>
    <referenceTo>DirectoryApi__Directory__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>