unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Event related to the configured Access Permission.</description>
    <inlineHelpText>Link to the Event related to the configured Access Permission.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>