unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Event_Category__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the Event Category configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** Link to the Event Category configured with the Access Permission.</inlineHelpText>
    <label>Event Category</label>
    <referenceTo>EventApi__Event_Category__c</referenceTo>
    <relationshipLabel>Access Permissions (Template)</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>