unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Event_Status_Page__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Status_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The link to the Event Status Page configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** The link to the Event Status Page required for Access Permission.</inlineHelpText>
    <label>Event Status Page</label>
    <referenceTo>EventApi__Event_Status_Page__c</referenceTo>
    <relationshipLabel>Page Access Permissions</relationshipLabel>
    <relationshipName>Page_Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>