unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the Registration Group configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** Link to the Registration Group configured with the Access Permission.</inlineHelpText>
    <label>Registration Group</label>
    <referenceTo>EventApi__Registration_Group__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>