unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the Schedule Item configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** Link to the Schedule Item configured with the Access Permission.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>