unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The link to the Sponsor Package configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** The link to the Sponsor Package configured with the Access Permission.</inlineHelpText>
    <label>Sponsor Package</label>
    <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>