unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The link to the Ticket Type configured with the Access Permission.</description>
    <inlineHelpText>** System Calculated ** The link to the Ticket Type configured with the Access Permission.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>