unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/joinapi__Join_Process__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Join_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates access permissions to Join Processes</description>
    <inlineHelpText>Relates access permissions to Join Processes</inlineHelpText>
    <label>Join Process</label>
    <referenceTo>joinapi__Join_Process__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>