unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/LTE__Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>LTE__Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates Access Permissions to the Menu Item object.</description>
    <inlineHelpText>Relates Access Permissions to the Menu Item object.</inlineHelpText>
    <label>Community Menu Item</label>
    <referenceTo>LTE__Menu_Item__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>