unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/LTE__Site__c.field-meta.xml
<CustomField>
    <fullName>LTE__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates Access Permissions to the Site object.</description>
    <inlineHelpText>Relates Access Permissions to the Site object.</inlineHelpText>
    <label>Community Site</label>
    <referenceTo>LTE__Site__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>