unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** If &quot;User Restricted Access Rule&quot; is unchecked, a link to the Badge Type required to access the content is required.</description>
    <inlineHelpText>** Conditionally Required ** If &quot;User Restricted Access Rule&quot; is unchecked, a link to the Badge Type required to access the content is required.</inlineHelpText>
    <label>Badge Type</label>
    <referenceTo>OrderApi__Badge_Type__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>