unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Icon__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Icon__c</fullName>
    <description>** System Calculated ** Icon for the related Badge Type with Badge Name.</description>
    <formula>IF(OrderApi__Badge_Type__c != null, OrderApi__Badge_Type__r.OrderApi__Icon__c, &quot;Image Not Available&quot;) &amp; &quot; &quot; &amp;  HYPERLINK(&quot;/&quot; &amp; OrderApi__Badge_Type__c, OrderApi__Badge_Type__r.Name, &quot;_tab&quot;)</formula>
    <inlineHelpText>** System Calculated ** Icon for the related Badge Type with Badge Name.</inlineHelpText>
    <label>Enabled Badge Type</label>
    <type>Text</type>
</CustomField>