unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When linked to an Item - the Access Permission serves as validation for wether the purchasing Account or Contact is allowed to be assigned and/or sold the Item.</description>
    <inlineHelpText>When linked to an Item - the Access Permission serves as validation for wether the purchasing Account or Contact is allowed to be assigned and/or sold the Item.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>