unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the controlled Item Class -- when linked to an Item Class the Access Permission will clone itself by default to all Items created as a child to the Item Class.</description>
    <inlineHelpText>Link to the controlled Item Class -- when linked to an Item Class the Access Permission will clone itself by default to all Items created as a child to the Item Class.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Default Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>