unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Page__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Page that the Display Permission is controlling.</description>
    <inlineHelpText>Link to the related Page that the Display Permission is controlling.</inlineHelpText>
    <label>Page</label>
    <referenceTo>PagesApi__Page__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>