unpackaged/main/default/objects/OrderApi__Access_Permission__c/fields/OrderApi__Store__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Store that the Display Permission is controlling.</description>
    <inlineHelpText>Link to the related Store that the Display Permission is controlling.</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipLabel>Access Permissions</relationshipLabel>
    <relationshipName>Access_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>